<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.markiewb.netbeans.plugins</groupId>
    <artifactId>copy-fqn</artifactId>
    <version>1.4.1</version>
    <packaging>nbm</packaging>

    <name>Copy qualified name</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <netbeans.version>RELEASE74</netbeans.version>
        <netbeans.run.params.ide/>
        <netbeans.run.params>-J-javaagent:"${current.jrebel.agent.path}" -J-Drebel.log=true ${netbeans.run.params.ide}</netbeans.run.params>
    </properties>
    <organization>
        <name>Benno Markiewicz (benno.markiewicz@googlemail.com)</name>
    </organization>
    <url>https://github.com/markiewb/nb-copy-fqn</url>

    <repositories>
        <!--
        Repository hosting NetBeans modules, especially APIs.
        Versions are based on IDE releases, e.g.: RELEASE691
        To create your own repository, use: nbm:populate-repository
        -->
        <repository>
            <id>netbeans</id>
            <name>NetBeans</name>
            <url>http://bits.netbeans.org/maven2/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-api-annotations-common</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-dialogs</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-awt</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util-lookup</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-util</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-java-source</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-nodes</artifactId>
            <version>${netbeans.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-loaders</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-libs-javacapi</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-openide-filesystems</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-modules-options-api</artifactId>
            <version>${netbeans.version}</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>de-markiewb-netbeans-plugin-copyfqn-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>nbm-maven-plugin</artifactId>
                <version>3.11.1</version>
                <extensions>true</extensions>
                <configuration>
                    <!-- keep this id, else the update from existing versions will fail
                         and will cause classpath issues in the log file
                    -->
                    <codeNameBase>de.markiewb.netbeans.plugin.copyfqn</codeNameBase>
                    <keystore>private/keystore</keystore>
                    <keystorealias>myself</keystorealias>
                    <licenseFile>LICENSE-2.0.txt</licenseFile>
                    <licenseName>Apache 2.0</licenseName>
                </configuration>
            </plugin>

            <plugin>
                <!-- NetBeans 6.9+ requires JDK 6, starting NetBeans 7.4 source 1.7 will be required   -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <argLine>-Djava.endorsed.dirs=${endorsed.dir}</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <!-- to have the jar plugin pickup the nbm generated manifest -->
                    <useDefaultManifestFile>true</useDefaultManifestFile>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <description>This plugin allows you to copy the fully qualified name of the element at the caret in the java source editor to the clipboard. There is also a context menu entry to copy it from the members and hierarchy view. Shortcuts for these actions can also be defined.

&lt;p&gt;
&lt;ul&gt;
&lt;li&gt;Copy qualified name (in Java editor): &lt;code&gt;CTRL-J, CTRL-C&lt;/code&gt;&lt;/li&gt;
&lt;li&gt;Copy qualified name (in Members/Hierarchy view): &lt;code&gt;CTRL-J, CTRL-I&lt;/code&gt;&lt;/li&gt;
&lt;/ul&gt;
&lt;/p&gt;
&lt;img src="https://raw.githubusercontent.com/markiewb/nb-copy-fqn/master/src/main/java/de/markiewb/netbeans/plugin/copyfqn/example.png"&gt;
&lt;p&gt;
&lt;h2&gt;Updates&lt;/h2&gt;

&lt;h3&gt;1.4.1:&lt;/h3&gt;
&lt;ul&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-copy-fqn/issues/12"&gt;Bug&lt;/a&gt;]: Built artefacts have wrong name&lt;/li&gt;
 &lt;/ul&gt;

&lt;h3&gt;1.4.0:&lt;/h3&gt;
&lt;ul&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-copy-fqn/issues/10"&gt;Feature&lt;/a&gt;]: Don't use FQN for types from java.lang&lt;/li&gt;
 &lt;/ul&gt;

&lt;h3&gt;1.3.0.3:&lt;/h3&gt;
&lt;ul&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-copy-fqn/issues/5"&gt;Feature&lt;/a&gt;]: Shorten up FQN (eclipse like, enabled by default) and option dialog&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-copy-fqn/issues/4"&gt;Feature&lt;/a&gt;]: Support annotation types too&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-copy-fqn/issues/7"&gt;Bug&lt;/a&gt;]: Support generics in parameters&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-copy-fqn/issues/8"&gt;Bug&lt;/a&gt;]: Do not copy return type of methods (keep it compatible to eclipse)&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-copy-fqn/issues/1"&gt;Task&lt;/a&gt;]: Convert to maven-based project&lt;/li&gt;
&lt;li&gt;[&lt;a href="https://github.com/markiewb/nb-copy-fqn/issues/5"&gt;Task&lt;/a&gt;]: Add donation link &lt;/li&gt;
 &lt;/ul&gt;
&lt;h3&gt;1.2&lt;/h3&gt;
&lt;ul&gt;
&lt;li&gt;Fix: runnable in JDK6/JDK7&lt;/li&gt;
&lt;/ul&gt;
&lt;h3&gt;1.1&lt;/h3&gt;
&lt;ul&gt;
&lt;li&gt;&lt;a href="http://code.google.com/p/copyfqn-fork-for-netbeans71rc2/issues/detail?id=5"&gt;Issue 5:&lt;/a&gt; Attach action into context menu of members and hierarchy view (&amp;ge; NB 7.3)&lt;/li&gt; 
&lt;li&gt;some internal rewrites&lt;/li&gt;
&lt;/ul&gt;
&lt;/p&gt;

&lt;p&gt;The code is originally based on the tutorials
&lt;a href="http://platform.netbeans.org/tutorials/nbm-copyfqn.html"&gt;[1]&lt;/a&gt; and
&lt;a href="http://netbeans.org/projects/platform/sources/platform-content/content/trunk/tutorials/60/nbm-whichelement.html?raw=true"&gt;[2]&lt;/a&gt;.

Regarding to &lt;a href="http://wiki.netbeans.org/TutorialsInCourses"&gt;[3]&lt;/a&gt; the code from
tutorials is free and &lt;a href="http://netbeans.org/about/legal/terms-of-use.html"&gt;[4]&lt;/a&gt; 4.c
applies, so that this derivate can be licensed separately.&lt;/p&gt;

&lt;p&gt;
Provide defects, request for enhancements and feedback at &lt;a href=https://github.com/markiewb/nb-copy-fqn/issues"&gt;https://github.com/markiewb/nb-copy-fqn/issues&lt;/a&gt;
&lt;/p&gt;
&lt;p&gt;Compatible to NetBeans 7.4+ and JDK7+&lt;/p&gt;
&lt;p&gt;
&lt;a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=K4CMP92RZELE2"&gt;&lt;img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" alt="btn_donate_SM.gif"&gt;&lt;/a&gt;

&lt;/p&gt;</description>
    <scm>
        
        <connection>scm:git:https://github.com/markiewb/nb-copy-fqn.git</connection>
    </scm>
</project>
